Merged in feature/MAGDASOLID-998-general-cleanup (pull request #100)
General cleanup of the project

* update TODO/FIXME items

* use English in all log messages

* polish up the exceptions

* clean up unused dependencies

* close the getChildPaths streams

* restore the readme

* Merge branch 'develop' into feature/MAGDASOLID-998-general-cleanup

* add the javadoc plugin to the new modules

* PR comments

* get rid of MagdaRequest


Approved-by: Wout Neirynck
Approved-by: Laurens Debackere
Approved-by: Benjamin Barrett